<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory app:title="@string/messages_header"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="username"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="Address"
            app:title="@string/address_"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="email"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:key="@string/phone"
            app:title="@string/phone"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/linkedin"
            app:title="@string/linkedin"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:key="@string/twitter"
            app:title="@string/twitter"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>


</PreferenceScreen>