<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_baseline_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/courseFragment"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/my_courses" />

        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>

</menu>