<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_enail"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/teal_200"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08012345612"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/teal_200"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_linked_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedin"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/https_linkedin_com_user"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/teal_200"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/user_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/https_twitter_com_danieltrejo"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/teal_200"
                    />

            </LinearLayout>
        </LinearLayout>

</RelativeLayout>