<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ProfileFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/image_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500">
                <RelativeLayout
                    android:id="@+id/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="8dp"
                        android:padding="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_account_circle_24"
                        android:contentDescription="@string/user_image_a" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/circle"
                    android:text="@string/user_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:id="@+id/user_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name"
                    android:text="@string/user_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_block"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@color/teal_200">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/white"
                            android:text="@string/_180k"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/white"
                            android:text="@string/following">

                        </TextView>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@color/purple_700">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/white"
                            android:text="@string/_143k"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/white"
                            android:text="@string/followers">

                        </TextView>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_below="@id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include layout="@layout/text_container"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
