<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp">

        <ImageView
            android:id="@+id/image_chat_user"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:src="@drawable/google_logo1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_chat_username"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            tools:text="@string/course_title"
            android:textColor="@color/purple_700"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/text_chat_last_message"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/image_chat_user"
            app:layout_constraintTop_toTopOf="@+id/image_chat_user"
            />

        <TextView
            android:id="@+id/text_chat_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/purple_700"
            android:padding="8dp"
            android:text="@string/cost"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_chat_username" />

        <TextView
            android:id="@+id/text_chat_last_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            tools:text="@string/author"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/purple_700"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/image_chat_user"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@id/text_chat_username"
            app:layout_constraintTop_toBottomOf="@id/text_chat_username"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>