<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/tekmooc"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/imageView2">

                <TextView
                    android:id="@+id/text_title_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_java_programming"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_free"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_completed_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_completed_level"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>